--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
 	"type": "module",
 	"main": "src/index.js",
 	"scripts": {
-		"start": "npm run compile -- --watch",
+		"start": "npm-run-all --parallel compile:sass:auto compile:js:auto",
 		"test": "eslint --cache *.js src && echo ✓",
-		"compile": "rollup -c"
+		"compile": "npm-run-all --parallel compile:sass compile:js",
+		"compile:sass:auto": "npm run compile:sass -- --watch",
+		"compile:sass": "faucet",
+		"compile:js:auto": "npm run compile:js -- --watch",
+		"compile:js": "rollup -c"
 	},
 	"dependencies": {},
 	"devDependencies": {
 		"eslint-config-fnd": "^1.8.0",
+		"faucet-pipeline-sass": "^1.3.0",
+		"npm-run-all": "^4.1.5",
 		"rollup": "^1.26.3",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-svelte": "^5.1.1",
